--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BarFooBazz</title>
+    <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>hello, world</h1>
+	  <h1>The Learn Enough Story</h1>
+	  <h2>Background</h2>
+	  <h2>Founders</h2>
+	  <h3>Michael Hartl</h3>
+	  <h3>Lee Donahoe</h3>
+	  <h3>Nick Merwin</h3>
+	  <p> </p>
+    <h1>Hello, world</h1>
     <p>Call me Ishmael.</p>
     <p>If you are reading this, I made a slightly functioning mock-website.</p>
     <p>
