--- a/index.html
+++ b/index.html
@@ -14,14 +14,24 @@
       We believe there are <strong>at least a billion people</strong> who can benefit from
       learning technical sophistication, probably more. To join our
       movement, <a href="https://learnenough.com/email">sign up for our official email list</a></p>
+	  <p>
+      <a href="https://twitter.com/learnenough" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png" alt="Twitter Logo from before X"<p>
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="https://twitter.com/learnenough"
+         target="_blank" rel="noopener">here</a>.
+    </p>
 	      <p>
       HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
-
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+       <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 	  <h2>Background</h2>
 	      <p>
       Learn Enough to Be Dangerous is an outgrowth of the
@@ -41,6 +51,8 @@
       sophistication taught by the Learn Enough tutorials can benefit
       <strong><em> at least</em> a billion people</strong>, and probably more.</p>
 	  <h3>Michael Hartl</h3>
+	  <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
+     alt="Michael Hartl">
 	  <p>
       Michael is the creator of the <a href="https://www.railstutorial.org/">
       Ruby on Rails Tutorial</a> and principal author of the
@@ -55,6 +67,8 @@
       <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>.
     </p>
 	  <h3>Lee Donahoe</h3>
+	  <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="Lee Donahoe">
 	  <p>
       When he's not literally swimming with sharks or hunting powder stashes
       on his snowboard, you can find Lee in front of his computer designing
@@ -66,6 +80,8 @@
       <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener">here</a>.
     </p>
 	  <h3>Nick Merwin</h3>
+	  <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="Nick Merwin">
 	   <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
       Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd
